--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "smooch-bot-example",
+  "name": "drubot",
   "version": "1.0.0",
-  "description": "Smooch Bot Example Apps",
-  "author": "Andrew Lavers <alavers@system42.net> (http://smooch.io/)",
+  "description": "drubot",
+  "author": "Andrew Brown <andrew@indentlabs.com> (http://drusepth.net/)",
   "scripts": {
     "start": "node heroku"
   },
